[package]
name = "teensy41_blink"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1", default-features = false, features = ["cortex-m-systick"] }

# USB logging is useful while bringing up board support. Remove these if you
# want the smallest possible LED-only example.
imxrt-log = { version = "0.1", default-features = false, features = ["log", "usbd"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
teensy4-panic = { version = "0.2", features = ["log"] }

[dependencies.teensy4-bsp]
version = "0.5"
features = [
    # Use the BSP runtime and t4link.x memory map for Teensy 4.x.
    "rt",
]

# Do not spend release-level optimization time on build dependencies, such as
# proc macros. This keeps embedded example builds faster.
[profile.release.build-override]
opt-level = 0
